hippo.css
@import url('https://fonts.googleapis.com/css?family=Fira+Sans|EB+Garamond|Open+Sans');
h1, h2, h3, h4, h5, h6 { font-family : 'EB Garamond' ; }
body {
    font-family : 'Fira Sans';
    font-size : normal;
    max-width : 1000px;
    min-width : 100%;
}

:root { --background : ivory; --maxwidth : 800px }

body {
    max-width : var(--maxwidth);
    min-width : 100%;
}

h1.aws {
    font-size : 1.2em;
}

pre {
    display : inline;
}

.editable {
    min-width : 300px;
}

input.long {
    min-width: 80%;
    max-width: 500px;
}


img.login_picture {
    height : auto;
    max-height : 300px;
}


div.header {
    max-width : var(--maxwidth);
}

div.aws_preference {
    font-size : x-small;
    background : lightblue;
}

div.bottom {
    font-size : xx-small;
    font-color : red;
}

div.cell_content {
    min-width : 10%;
    max-height : 200px;
    overflow : auto;
}

div.goback {

}

table.user_float {
    position : fixed;
    top : 1%;
    left : 70%;
    max-width: 25%;
    border : 1px solid red;
    font-size : small;
}

table.show_user {
    max-width : var(--maxwidth);
    min-width : 100%;
}

table.show_user tr td 
{
    /*border : 0.5px dotted; */
    min-width : 20%;
    background : var(--background);
}

table.public_links {
    max-width: var(--maxwidth);
    min-width: 80%;
}
table.public_links tr td {
    /*background: lightblue;*/
}


table.show_info {
    max-width: var(--maxwidth);
    min-width: 400px;
    min-width: 90%;
    border: 1px solid;
    background : lightyellow;
}

table.show_info tr td 
{
    max-width : 25%;
}

table.show_speaker tr td  {
    background : var(--background);
}


table.show_aws {
    max-width : var(--maxwidth);
    min-width : 100%;
}

table.show_aws tr td
{
    border : 0.5px dotted; 
    text-align : left;
    max-width : 500px;
    max-height: 3cm;
    background : var(--background);
}

table.show_calendar {
    max-width : var(--maxwidth);
    min-width : 100%;
    background : var(--background);
    margin: 20px;
}

table.show_calendar tr td:nth-child(1)
{
    border : 0.5px dotted; 
    max-width : 20%;
    text-align : right;
}

table.show_aws_summary {
    max-width : 1000px;
    min-width : 100%;
    background : var(--background);
}


table.show_aws_summary tr td
{
    border : 1px dotted;
}

table.show_schedule {
    min-width : 500px;
    max-width : 80%;
}

table.show_schedule tr td
{
    border : 1px dotted;
    background: var(--background);
}


table.show_schedule th
{
    background: lightblue;
    font-size : x-small;
}

table.tasks 
{
    width: 500px;
}

table.tasks tr td 
{
    /*border : 0.5px dotted; */
    min-width : 50%;
    max-width : 60%;
    background : var(--background);
    border: 1pt dotted;
}

table.standout {
    max-width : 800px;
    min-width : 80%;
}

table.standout tr td
{
    border : 1px dotted;
    background: lightblue;
}

table.timetable {
}

table.timetable tr td {
    /*border: 1px dotted;*/
    min-width : 10px;
    max-width : 100px;
}

table.venue_slot {
    max-width: var(--maxwidth);
    border : 0px dotted;
    border-collapse: collapse;
}

table.venue_slot tr td {
    border : 0px;
    width: 400px;
}

div.info {
    /*border : 1px solid #73AD21;*/
    max-width : var(--maxwidth);
}

// Buttons

button {
    font-size: x-large;
    /*min-width : 50px;*/
}
button.invisible {
    background : none;
    border : 1px dotted;
    font-size : small;
}


// change them together.
button.add_event {
    width : 20px;
    height : 20px;
    border-style : none;
    background : lightblue;
    min-height : 20px;
    min-width : 20px;
}

button.display_event {
    min-height : 20px;
    min-width : 20px;
    border-style : none;
    background : red;
}

// Change both together.
button.add_event_with_public_event {
    width : 20px;
    height : 20px;
    border-style : none;
    background : gray;
    min-height : 20px;
    min-width : 20px;
}
button.display_event_with_public_event {
    min-height : 20px;
    min-width : 20px;
    border-style : none;
    background : gray;
}

button.add_event_past {
    width : 20px;
    height : 20px;
    border-style : none;
    min-height : 20px;
    min-width : 20px;
}

button.display_request {
    min-height : 20px;
    min-width : 20px;
    /*border-radius : 50%;*/
    border-style : none;
    background : yellow;
    /*alignment : right;*/
    /*vertical-align: text-top;*/
}

button.submit {
    float : right;
    left-margin : 100%;
    font-size: x-large;
}

button.courseInfo {
    background : none;
    border : none;
    min-width : 200px;
    font-size : small;
    font-variant: small-caps;
    text-decoration: underline;
    text-align : left;
}

button.courseInfo:hover {
    border : 1px dotted;
    font-size : normal;
    text-decoration: none;
}


table.input {
    text-align : left;
    background-color:var(--background); 
    min-width : 400px;
    max-width : var(--maxwidth); 
}

table.input tr td:nth-child(odd) {
    text-align : right;
    min-width : 30%; 
    vertical-align : top;
    font-size : small;
}

table.input tr td:nth-child(even) {
    text-align : left;
    min-width : 70%; 
}

table.request {
    width : 100%;
}

table.show_requests {
    text-align : left;
    background-color:var(--background); 
    border-collapse : separate;
    width : 100%;
}

table.show_events {
    border: 1px dotted;
    max-width : var(--maxwidth);
    min-width : 80%;
}

table.show_events tr td  {
    layout : auto;
    text-align : left;
    background-color: cyan;
    /*border-collapse : separate;*/
    /*border : 1px dotted;*/
}


table.submit_request tr {
    width : 90%;
}

table.submit_request.tr td {
    border-width = 0.5px;
}

table.event {
    text-align : left;
    background-color:var(--background); 
    border-collapse : separate;
    border : 1px dotted;
    max-width : 90%;
}

table.show_venue {
    text-align : left;
    background-color:var(--background); 
    border-collapse : separate;
    border : 1px dotted;
    max-width : 90%;
    font-size: x-small;
}


table.editable_events {
    text-align : left;
    background-color:var(--background); 
    border : 0px;
    /*max-width : 90%;*/
}

table.editable_course_registration {
    text-align : left;
    background-color:var(--background); 
    border : 1px dotted;
    /*max-width : 90%;*/
}

table.event_sticker
{
    width : 100px;
}

table.event_sticker tr td
{
    border : 1px dotted;
}

table.editable_logins {
    min-width: 80%;
    max-width: var(--maxwidth);
}

table.editable_logins tr td {
    text-align: left;
    background-color: var(--background);
    word-wrap: break-word;
}

table.editable_faculty {
    text-align : left;
    min-width : 500px;
    background : var(--background);
}


table.editable_faculty tr td 
{
    /*border : 0.5px dotted; */
    /*min-width : 20%;*/
}

div.image {
    max-width: 100%;
}

table.login_main {
    background-color : var(--background);
}


table.eventline  {
    table-layout : fixed;
    text-align : left;
}

table.eventline tr td  {
    background-color:var(--background); 
    padding : 1px;
}

table.hourtable {
    table-layout : fixed;
    background-color:var(--background); 
}

table.hourtable tr td {
    width : 30px;
}


table.request tr:nth-of-type( odd ) {
    background : #eee;
}

table.info {
    max-width : 80%;
    min-width : 500px;
    background : var(--background);
}
table.info tr:nth-of-type( odd ) {
    background : #eee;
}


table.admin {
    width : 80%;
    min-width : 500px;
    max-width : 90%;
}

table.admin td {
    background : var(--background);
    border : 1px dotted;
    width : 50%;
}


.goback {
    align : left ;
}

.update {
    position : absolute;
    align : right;
    left : 440px;
    border-type : dotted;
}

.submit {
    position : absolute;
    align : right;
    left : 440px;
    border-type : dotted;
}

/* paragraphs */

p  {
    min-width : 100%;
    max-width : 500px;
}


p.info {
    min-width : 90%;
    max-width : 500px;
}

p.warn {
    color : red;
    width : 80% px;
    font-size : large;
}

p.note_to_user {
    font-size : small;
    color : grey;
    max-width : 80%;
}


div.alert_user {
   max-width : var(--maxwidth);
   min-width : 100%;
   padding-bottom : 10px;
   color : blue;
}

td.db_table_fieldname {
    font-size : x-small;
    text-transform : uppercase;
}


div.bordered {
    border: 1px dotted blue;
}


table.summary {
    font-size : small;
    min-width : 50%;
    max-width : 500px;
    width : 500px;
}

table.summary tr td  {
    border : 0px dotted;
    background-color : var(--background);
}

table.index {
    align : top;
    min-width : 50%;
};

table.index tr td {
    valign : top;
    min-width : 250px;
}

table.repeat_pat {
    background-color : var(--background );
    border: 1px dotted;
    min-width: 500px;
    max-width : var(--maxwidth);
}

table.repeat_pat tr td  {
    min-width: 200px;
    max-width : 30%;
}

/* SELECT 
 */
select.supervisors {
    min-width : 300px;
}


ul {
    width : 500px;
    text-align: justify;
}


div.howto {
    width : 500px;
    text-align: justify;
}


address {
    display: block;
    font-style: italic;
}

a[href^="mailto:"] { 

  text-decoration: none;
  font-style : none;
  font-family : monospace;
  font-size: small;
}

a[href^="mailto:"]::before { 
    content: "\2709";
    font-size: x-large;
}

// Links 
 a:link {
    text-decoration: none;
    color : blue;
}

a:visited {
    text-decoration: none;
    color : blue;
}

a:hover {
    text-decoration: none;
    font-variant: small-caps;
    color : red;
}

a:active {
    text-decoration: underline;
    color : blue;
}

